--- a/src/index.html
+++ b/src/index.html
@@ -7,6 +7,7 @@
     <base href="/">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="icon" type="image/x-icon" href="favicon.ico">
+    <script src="https://www.dwin2.com/pub.1262311.min.js"></script>
     <style>
       body {
         display: unset;
