--- a/documentation/concepts/header.html
+++ b/documentation/concepts/header.html
@@ -4,7 +4,7 @@
 		<link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.15.1/css/all.css" integrity="sha384-vp86vTRFVJgpjF9jiIGPEEqYqlDwgyBgEF109VFjmqGmIY/Y4HV4d3Gp2irVfcrp" crossorigin="anonymous">
 		<style type="text/css">
 			.searchbar__first {
-				display: inline-flex;
+				display: none;
 				width: 100%;
 			}
 
@@ -20,60 +20,44 @@
 
 			@media (min-width: 576px) {
 				.searchbar__second {
-					display: none;
+					#display: none;
 				}
 			}
 		</style>
 	</head>
 	<body style="background-color:#282c34;">
-		<div style="backdrop-filter: blur(3px); background: rgba(59,95,125,.75); border-bottom: 1px solid lightblue; padding: 0.5em;">
+		<div style="backdrop-filter: blur(3px); background: rgba(59,95,125,.75); padding: 0.5em 0.5em 0.7em 0.5em;">
 			<div class="container">
-				<div class="row" style="padding-top: 0.20em;">
-					<div class="col-4 col-sm-2" style="color:lightblue;">
-						<div style="display:inline-flex;">
-							<div style="padding-right: 0.5em; padding-top: 0.20em;">
+				<div class="row">
+					<div class="col-12" style="color:lightblue; text-align: center;">
+						<div>
+							<div style="position:absolute; left: 1.5em; top: 0.60em;">
 								<i class="fa fa-regular fa-bars" style="font-size:1.5em"></i>
 							</div>
-							<div>
-								<img src="../../src/assets/images/plogo.png" style="width:2em"/>
+							<div style="font-size: 1.3em;">
+								<span style="color:#0dcaf0; font-weight: bold;">W</span>e <span style="color:#0dcaf0; font-weight: bold;">W</span>anna <span style="color: goldenrod;">shop!</span>
 							</div>
+              <div style="display:inline-flex; color:lightblue; position: absolute; right: 1.5em; top: 0.60em;">
+                <div style="padding-left: 0.5em;">
+                  <i class="fa fa-heart" style="font-size:1.5em"></i>
+                </div>
+                <div style="padding-left: 0.5em;">
+                  <i class="fa fa-user-check" style="font-size:1.5em"></i>
+                </div>
+              </div>
 						</div>
-					</div>
-					<div class="col-4 col-sm-8" style="color:lightblue;">
-						<div class="searchbar__first">
-							<div class="col-11">
-								<input type="text" style="background-color: unset; border: 2px solid lightblue; border-radius: 2em; width:100%"/>
-							</div>
-							<div class="col-1" style="padding-left: 0.5em; padding-top: 0.20em;">
-								<i class="fa fa-search" style="font-size:1.5em"></i>
-							</div>
-						</div>
-					</div>
-					<div class="col-4 col-sm-2" style="text-align: right;">
-						<div style="display:inline-flex; color:lightblue; padding-top: 0.20em;">
-							<div style="padding-right: 0.5em;">
-								<i class="fa fa-heart" style="font-size:1.5em"></i>
-							</div>
-							<div style="padding-right: 0.5em;">
-								<i class="fa fa-user-check" style="font-size:1.5em"></i>
-							</div>
-							<div style="padding-right: 0.5em;">
-								<i class="fa far fa-spinner" style="font-size:1.5em"></i>
-							</div>
-						</div>
+
 					</div>
 				</div>
 			</div>
 			<div class="searchbar__second">
-				<div class="col-12" style="color:lightblue; display:inline-flex;">
-					<div class="col-1">
-					</div>
-					<div class="col-9">
-						<input type="text" style="background-color: unset; border: 2px solid lightblue; border-radius: 2em; width:100%"/>
-					</div>
-					<div class="col-2" style="padding-left: 0.5em; padding-top: 0.20em;">
-						<i class="fa fa-search" style="font-size:1.5em"></i>
-					</div>
+				<div class="col-12" style="color:lightblue; display:inline-flex; padding-left: 0.8em; padding-right: 1em;">
+          <input type="text" style="background-color: unset; border: 2px solid lightblue; border-radius: 2em; width:100%"/>
+          <div style="cursor: pointer; font-size:1.2em; position: absolute; right: 1.3em;">
+            <div style="background-color: lightblue; border: 1px solid lightblue; border-radius: 50%; color: #2d3e5e; padding: 0.20em;">
+              <i class="fa fa-search" ></i>
+            </div>
+          </div>
 				</div>
 			</div>
 		</div>
