- unlocked wewanna for search engine bots

--- a/src/index.html
+++ b/src/index.html
@@ -1,8 +1,7 @@
 <!doctype html>
-<html lang="en">
+<html lang="de">
   <head>
     <meta charset="utf-8">
-    <meta name="robots" content="noindex">
     <title>We wanna shop!</title>
     <base href="/">
     <meta name="verification" content="b2e3aa44ed9d8b3778745072ab5578e3" />
