- made robot support explicit

--- a/src/index.html
+++ b/src/index.html
@@ -1,14 +1,16 @@
 <!doctype html>
 <html lang="de">
   <head>
-    <meta charset="utf-8">
     <title>We wanna shop!</title>
     <base href="/">
-    <meta name="verification" content="b2e3aa44ed9d8b3778745072ab5578e3" />
-    <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="icon" type="image/x-icon" href="favicon.ico">
     <script src="https://www.dwin2.com/pub.1262311.min.js"></script>
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.15.1/css/all.css" integrity="sha384-vp86vTRFVJgpjF9jiIGPEEqYqlDwgyBgEF109VFjmqGmIY/Y4HV4d3Gp2irVfcrp" crossorigin="anonymous">
+
+    <meta charset="utf-8">
+    <meta name="robots" content="follow">
+    <meta name="verification" content="b2e3aa44ed9d8b3778745072ab5578e3" />
+    <meta name="viewport" content="width=device-width, initial-scale=1">
 
     <style>
       body {
