--- a/src/index.html
+++ b/src/index.html
@@ -9,17 +9,56 @@
 
     <meta charset="utf-8">
     <meta name="robots" content="follow">
-    <meta name="verification" content="b2e3aa44ed9d8b3778745072ab5578e3" />
-    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <meta name="verification" content="b2e3aa44ed9d8b3778745072ab5578e3"/>
+    <meta name="viewport" content="width=device-width, initial-scale=1"/>
+    <meta name="keywords" content="finden, shopping, mode, musik, kinder, multimedia, technik, videospiele, konsolen, elektronik, computer, schönheit, pflege, entertainment"/>
 
     <style>
       body {
         display: unset;
         margin: unset;
       }
+
+      .bot__link {
+        display: none;
+      }
     </style>
   </head>
   <body class="page__body">
     <app-root></app-root>
+
+    <a href="fashion/women/bags" class="bot__link">Taschen / Bags</a>
+    <a href="fashion/women/jeans" class="bot__link">Damen Jeans / Women Jeans</a>
+    <a href="fashion/women/jewelry" class="bot__link">Damen Schmuck / Women Jewelry</a>
+    <a href="fashion/women/pants" class="bot__link">Damen Hosen / Women Pants</a>
+    <a href="fashion/women/shoes" class="bot__link">Damen Schuhe / Women Shoes</a>
+    <a href="fashion/women/sweats-and-knitwear" class="bot__link">Damen Pullover und Strickware / Women Sweaters and Knitwear</a>
+
+    <a href="fashion/men/jeans" class="bot__link">Herren Jeans / Men Jeans</a>
+    <a href="fashion/men/jewelry" class="bot__link">Herren Schmuck / Men Jewelry</a>
+    <a href="fashion/men/pants" class="bot__link">Herren Hosen / Men Pants</a>
+    <a href="fashion/men/shoes" class="bot__link">Herren Schuhe / Men Shoes</a>
+    <a href="fashion/men/sweats-and-knitwear" class="bot__link">Herren Pullover und Strickware / Men Sweaters and Knitwear</a>
+
+    <a href="kids/party/tableware" class="bot__link">Kinder-Party Tischgeschirr / Kids-Party Tableware</a>
+    <a href="kids/school/satchel" class="bot__link">Schulrucksäcke / School Satchels</a>
+
+    <a href="multimedia/games/nintendo-switch" class="bot__link">Nintendo Switch Spiele / Nintendo Switch Games</a>
+    <a href="multimedia/games/pc" class="bot__link">PC-Spiele / PC-Games</a>
+    <a href="multimedia/games/playstation-4" class="bot__link">Playstation 4 Spiele / Playstation 4 Games</a>
+    <a href="multimedia/games/playstation-5" class="bot__link">Playstation 5 Spiele / Playstation 5 Games</a>
+    <a href="multimedia/games/xbox-one" class="bot__link">XBOX One Spiele / XBOX One Games</a>
+    <a href="multimedia/games/xbox-360" class="bot__link">XBOX 360 Spiele / XBOX 360 Games</a>
+
+    <a href="electronics-and-computers/large-appliances/fridges-and-freezers" class="bot__link">Kühl- und Gefrierschränke / Fridges and Freezers</a>
+
+    <a href="music/cd/alternative" class="bot__link">Alternative-Musik / Alternative-Music</a>
+    <a href="music/cd/pop" class="bot__link">Pop-Musik / Pop-Music</a>
+    <a href="music/cd/rock" class="bot__link">Rock-Musik</a>
+    <a href="music/cd/german-folk-music" class="bot__link">Volksmusik / German folk music</a>
+
+    <a href="beauty-and-care/skin-care/face-care" class="bot__link">Schönheit: Gesichtspflege / Beauty: Face-Care</a>
+    <a href="beauty-and-care/skin-care/kids" class="bot__link">Pflege: Kinder Hauptpflege / Kids Skin-Care</a>
+
   </body>
 </html>
