- added new category "lighting > inner lighting > ceiling"

--- a/src/index.html
+++ b/src/index.html
@@ -52,6 +52,8 @@
 
     <a href="electronics-and-computers/large-appliances/fridges-and-freezers" class="bot__link">Kühl- und Gefrierschränke / Fridges and Freezers</a>
 
+    <a href="lighting/inner-lighting/ceiling" class="bot__link">Deckenleuchten / Ceiling Lighting</a>
+
     <a href="music/cd/alternative" class="bot__link">Alternative-Musik / Alternative-Music</a>
     <a href="music/cd/pop" class="bot__link">Pop-Musik / Pop-Music</a>
     <a href="music/cd/rock" class="bot__link">Rock-Musik</a>
