- added new category "cosmetics > women > fragrances"

--- a/src/index.html
+++ b/src/index.html
@@ -27,6 +27,8 @@
   <body class="page__body">
     <app-root></app-root>
 
+    <a href="/cosmetics/women/fragrances" class="bot__link">Damen Düfte / Women Fragrances</a>
+
     <a href="/fashion/women/bags" class="bot__link">Taschen / Bags</a>
     <a href="/fashion/women/jeans" class="bot__link">Damen Jeans / Women Jeans</a>
     <a href="/fashion/women/jewelry" class="bot__link">Damen Schmuck / Women Jewelry</a>
