--- a/src/index.html
+++ b/src/index.html
@@ -28,6 +28,7 @@
     <app-root></app-root>
 
     <a href="/cosmetics/women/fragrances" class="bot__link">Damen Düfte / Women Fragrances</a>
+    <a href="/cosmetics/makeup/eyes" class="bot__link">Augen-Makeup / Makeup Eyes</a>
 
     <a href="/fashion/women/bags" class="bot__link">Taschen / Bags</a>
     <a href="/fashion/women/jeans" class="bot__link">Damen Jeans / Women Jeans</a>
