--- a/src/index.html
+++ b/src/index.html
@@ -29,6 +29,7 @@
 
     <a href="/cosmetics/women/fragrances" class="bot__link">Damen Düfte / Women Fragrances</a>
     <a href="/cosmetics/makeup/eyes" class="bot__link">Augen-Makeup / Makeup Eyes</a>
+    <a href="/cosmetics/hair/styling" class="bot__link">Haar-Styling / Hair-Styling</a>
 
     <a href="/fashion/women/bags" class="bot__link">Taschen / Bags</a>
     <a href="/fashion/women/jeans" class="bot__link">Damen Jeans / Women Jeans</a>
