--- a/src/index.html
+++ b/src/index.html
@@ -12,6 +12,7 @@
     <meta name="verification" content="b2e3aa44ed9d8b3778745072ab5578e3"/>
     <meta name="viewport" content="width=device-width, initial-scale=1"/>
     <meta name="keywords" content="finden, shopping, mode, musik, kinder, multimedia, technik, videospiele, konsolen, elektronik, computer, schönheit, pflege, entertainment"/>
+    <meta name="description" content="Finde alles was du brauchst oder mache deiner Familie oder deinen Freunden eine Freude. Hier findest du alle möglichen Produkte auf vielen Shops im Netz nach deinem Bedarf!" />
 
     <style>
       body {
@@ -20,14 +21,14 @@
       }
 
       .bot__link {
-        display: none;
+        font-size: 0;
       }
     </style>
   </head>
   <body class="page__body">
     <app-root></app-root>
 
-    <a href="/cosmetics/women/fragrances" class="bot__link">Damen Düfte / Women Fragrances</a>
+    <a href="/cosmetics/women/fragrances"  class="bot__link">Damen Düfte / Women Fragrances</a>
     <a href="/cosmetics/makeup/eyes" class="bot__link">Augen-Makeup / Makeup Eyes</a>
     <a href="/cosmetics/hair/styling" class="bot__link">Haar-Styling / Hair-Styling</a>
 
