- added new category "home > accessoires > carpets"

--- a/src/index.html
+++ b/src/index.html
@@ -45,6 +45,8 @@
     <a href="/fashion/men/shoes" class="bot__link">Herren Schuhe / Men Shoes</a>
     <a href="/fashion/men/sweats-and-knitwear" class="bot__link">Herren Pullover und Strickware / Men Sweaters and Knitwear</a>
 
+    <a href="/home/accessoires/carpets" class="bot__link">Teppiche / Carpets</a>
+
     <a href="/kids/party/tableware" class="bot__link">Kinder-Party Tischgeschirr / Kids-Party Tableware</a>
     <a href="/kids/school/satchel" class="bot__link">Schulrucksäcke / School Satchels</a>
 
