--- a/src/index.html
+++ b/src/index.html
@@ -49,6 +49,8 @@
 
     <a href="/kids/party/tableware" class="bot__link">Kinder-Party Tischgeschirr / Kids-Party Tableware</a>
     <a href="/kids/school/satchel" class="bot__link">Schulrucksäcke / School Satchels</a>
+    <a href="/kids/toys/electric-vehicles" class="bot__link">Elektro-Fahrzeuge / Electric vehicles</a>
+    <a href="/kids/toys/scooters" class="bot__link">Roller / Scooters</a>
 
     <a href="/multimedia/games/nintendo-switch" class="bot__link">Nintendo Switch Spiele / Nintendo Switch Games</a>
     <a href="/multimedia/games/pc" class="bot__link">PC-Spiele / PC-Games</a>
