- added new category

--- a/src/index.html
+++ b/src/index.html
@@ -49,6 +49,7 @@
 
     <a href="/kids/party/tableware" class="bot__link">Kinder-Party Tischgeschirr / Kids-Party Tableware</a>
     <a href="/kids/school/satchel" class="bot__link">Schulrucksäcke / School Satchels</a>
+    <a href="/kids/toys/babies" class="bot__link">Baby-Spielzeuge / Baby-Toys</a>
     <a href="/kids/toys/electric-vehicles" class="bot__link">Elektro-Fahrzeuge / Electric vehicles</a>
     <a href="/kids/toys/scooters" class="bot__link">Roller / Scooters</a>
 
