- made robots.txt readable - optimised robots meta tag

--- a/src/index.html
+++ b/src/index.html
@@ -12,7 +12,7 @@
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.15.1/css/all.css" integrity="sha384-vp86vTRFVJgpjF9jiIGPEEqYqlDwgyBgEF109VFjmqGmIY/Y4HV4d3Gp2irVfcrp" crossorigin="anonymous">
 
     <meta charset="utf-8">
-    <meta name="robots" content="all">
+    <meta name="robots" content="index, follow">
     <meta name="verification" content="b2e3aa44ed9d8b3778745072ab5578e3"/>
     <meta name="viewport" content="width=device-width, initial-scale=1"/>
     <meta name="keywords" content="finden, shopping, mode, musik, kinder, multimedia, technik, videospiele, konsolen, elektronik, computer, schönheit, pflege, entertainment"/>
