- added new category "cosmetics > makeup > lips"

--- a/src/index.html
+++ b/src/index.html
@@ -34,6 +34,7 @@
 
     <a href="/cosmetics/women/fragrances"  class="bot__link">Damen Düfte / Women Fragrances</a>
     <a href="/cosmetics/makeup/eyes" class="bot__link">Augen-Makeup / Makeup Eyes</a>
+    <a href="/cosmetics/makeup/lips" class="bot__link">Lippen-Makeup / Makeup Lips</a>
     <a href="/cosmetics/hair/styling" class="bot__link">Haar-Styling / Hair-Styling</a>
 
     <a href="/fashion/women/bags" class="bot__link">Taschen / Bags</a>
