- added new categories - updated sitemap.xml

--- a/src/index.html
+++ b/src/index.html
@@ -65,7 +65,11 @@
     <a href="/multimedia/games/xbox-one" class="bot__link">XBOX One Spiele / XBOX One Games</a>
     <a href="/multimedia/games/xbox-360" class="bot__link">XBOX 360 Spiele / XBOX 360 Games</a>
 
+    <a href="/electronics-and-computers/home/tvs" class="bot__link">Fernseher / TVs</a>
+    <a href="/electronics-and-computers/large-appliances/dishwashers" class="bot__link">Geschirrspüler / Dishwashers</a>
+    <a href="/electronics-and-computers/large-appliances/dryers" class="bot__link">Trockner / Dryers</a>
     <a href="/electronics-and-computers/large-appliances/fridges-and-freezers" class="bot__link">Kühl- und Gefrierschränke / Fridges and Freezers</a>
+    <a href="/electronics-and-computers/large-appliances/washing-machines" class="bot__link">Waschmaschinen / Washing Machines</a>
 
     <a href="/lighting/inner-lighting/ceiling" class="bot__link">Deckenleuchten / Ceiling Lighting</a>
 
