--- a/src/index.html
+++ b/src/index.html
@@ -51,6 +51,8 @@
     <a href="/fashion/men/sweats-and-knitwear" class="bot__link">Herren Pullover und Strickware / Men Sweaters and Knitwear</a>
 
     <a href="/home/accessoires/carpets" class="bot__link">Teppiche / Carpets</a>
+    <a href="/home/garden/garden-houses" class="bot__link">Gartenhäuser / Garden Houses</a>
+    <a href="/home/tools/drilling-machines" class="bot__link">Bohrmaschinen und Akku-Schrauber / Drilling Machines</a>
 
     <a href="/kids/party/tableware" class="bot__link">Kinder-Party Tischgeschirr / Kids-Party Tableware</a>
     <a href="/kids/school/satchel" class="bot__link">Schulrucksäcke / School Satchels</a>
