--- a/src/index.html
+++ b/src/index.html
@@ -57,8 +57,11 @@
     <a href="/kids/party/tableware" class="bot__link">Kinder-Party Tischgeschirr / Kids-Party Tableware</a>
     <a href="/kids/school/satchel" class="bot__link">Schulrucksäcke / School Satchels</a>
     <a href="/kids/toys/babies" class="bot__link">Baby-Spielzeuge / Baby-Toys</a>
+    <a href="/kids/toys/construction-toys" class="bot__link">Bau- und Konstruktionsspielzeug / Build- and Construction-Toys</a>
     <a href="/kids/toys/electric-vehicles" class="bot__link">Elektro-Fahrzeuge / Electric vehicles</a>
+    <a href="/kids/toys/games" class="bot__link">Spiele / Games</a>
     <a href="/kids/toys/scooters" class="bot__link">Roller / Scooters</a>
+    <a href="/kids/toys/toy-vehicles" class="bot__link">Spielzeugfahrzeuge / Toy vehicles</a>
 
     <a href="/multimedia/games/nintendo-switch" class="bot__link">Nintendo Switch Spiele / Nintendo Switch Games</a>
     <a href="/multimedia/games/pc" class="bot__link">PC-Spiele / PC-Games</a>
