- added new categories

--- a/src/index.html
+++ b/src/index.html
@@ -85,5 +85,9 @@
 
     <a href="/beauty-and-care/skin-care/face-care" class="bot__link">Schönheit: Gesichtspflege / Beauty: Face-Care</a>
     <a href="/beauty-and-care/skin-care/kids" class="bot__link">Pflege: Kinder Hauptpflege / Kids Skin-Care</a>
+
+    <a href="/vehicles/cars/summer-tyres" class="bot__link">Sommer Reifen / Summer tyres</a>
+    <a href="/vehicles/cars/winter-tyres" class="bot__link">Winter Reifen / Winter tyres</a>
+    <a href="/vehicles/cars/all-weather-tyres" class="bot__link">Allwetter Reifen / All weather tyres</a>
   </body>
 </html>
