- added new categories - added new product properties for books

--- a/src/index.html
+++ b/src/index.html
@@ -63,6 +63,8 @@
     <a href="/kids/toys/scooters" class="bot__link">Roller / Scooters</a>
     <a href="/kids/toys/toy-vehicles" class="bot__link">Spielzeugfahrzeuge / Toy vehicles</a>
 
+    <a href="/multimedia/books/history" class="bot__link">Geschichtsbücher / History-Books</a>
+    <a href="/multimedia/books/philosophy" class="bot__link">Bücher über Philosophie / Philosophy-Books</a>
     <a href="/multimedia/games/nintendo-switch" class="bot__link">Nintendo Switch Spiele / Nintendo Switch Games</a>
     <a href="/multimedia/games/pc" class="bot__link">PC-Spiele / PC-Games</a>
     <a href="/multimedia/games/playstation-4" class="bot__link">Playstation 4 Spiele / Playstation 4 Games</a>
