- added new category "kids > books > audio books" - added pagination in overview :)

--- a/src/index.html
+++ b/src/index.html
@@ -54,6 +54,7 @@
     <a href="/home/garden/garden-houses" class="bot__link">Gartenhäuser / Garden Houses</a>
     <a href="/home/tools/drilling-machines" class="bot__link">Bohrmaschinen und Akku-Schrauber / Drilling Machines</a>
 
+    <a href="/kids/books/audiobooks" class="bot__link">Kinder Hörbücher / Kids Audiobooks</a>
     <a href="/kids/party/tableware" class="bot__link">Kinder-Party Tischgeschirr / Kids-Party Tableware</a>
     <a href="/kids/school/satchel" class="bot__link">Schulrucksäcke / School Satchels</a>
     <a href="/kids/toys/babies" class="bot__link">Baby-Spielzeuge / Baby-Toys</a>
