- added new categories

--- a/src/index.html
+++ b/src/index.html
@@ -51,6 +51,7 @@
     <a href="/fashion/men/sweats-and-knitwear" class="bot__link">Herren Pullover und Strickware / Men Sweaters and Knitwear</a>
 
     <a href="/home/accessoires/carpets" class="bot__link">Teppiche / Carpets</a>
+    <a href="/home/furniture/gaming-chairs" class="bot__link">Gaming Stühle / Gaming Chairs</a>
     <a href="/home/garden/garden-houses" class="bot__link">Gartenhäuser / Garden Houses</a>
     <a href="/home/tools/drilling-machines" class="bot__link">Bohrmaschinen und Akku-Schrauber / Drilling Machines</a>
 
@@ -73,6 +74,7 @@
     <a href="/multimedia/games/xbox-one" class="bot__link">XBOX One Spiele / XBOX One Games</a>
     <a href="/multimedia/games/xbox-360" class="bot__link">XBOX 360 Spiele / XBOX 360 Games</a>
 
+    <a href="/electronics-and-computers/computers/tablets" class="bot__link">Tablets / Tablets</a>
     <a href="/electronics-and-computers/home/tvs" class="bot__link">Fernseher / TVs</a>
     <a href="/electronics-and-computers/large-appliances/dishwashers" class="bot__link">Geschirrspüler / Dishwashers</a>
     <a href="/electronics-and-computers/large-appliances/dryers" class="bot__link">Trockner / Dryers</a>
