- added new categories

--- a/src/index.html
+++ b/src/index.html
@@ -53,6 +53,7 @@
     <a href="/home/accessoires/carpets" class="bot__link">Teppiche / Carpets</a>
     <a href="/home/furniture/gaming-chairs" class="bot__link">Gaming Stühle / Gaming Chairs</a>
     <a href="/home/garden/garden-houses" class="bot__link">Gartenhäuser / Garden Houses</a>
+    <a href="/home/garden/grills" class="bot__link">Grillen / Grill</a>
     <a href="/home/tools/drilling-machines" class="bot__link">Bohrmaschinen und Akku-Schrauber / Drilling Machines</a>
 
     <a href="/kids/books/audiobooks" class="bot__link">Kinder Hörbücher / Kids Audiobooks</a>
@@ -91,6 +92,7 @@
     <a href="/beauty-and-care/skin-care/face-care" class="bot__link">Schönheit: Gesichtspflege / Beauty: Face-Care</a>
     <a href="/beauty-and-care/skin-care/kids" class="bot__link">Pflege: Kinder Hauptpflege / Kids Skin-Care</a>
 
+    <a href="/vehicles/cars/child-seats" class="bot__link">Kindersitze / Child seats</a>
     <a href="/vehicles/cars/summer-tyres" class="bot__link">Sommer Reifen / Summer tyres</a>
     <a href="/vehicles/cars/winter-tyres" class="bot__link">Winter Reifen / Winter tyres</a>
     <a href="/vehicles/cars/all-weather-tyres" class="bot__link">Allwetter Reifen / All weather tyres</a>
