- added new category "sports > exercise > equipment"

--- a/src/index.html
+++ b/src/index.html
@@ -89,6 +89,8 @@
     <a href="/music/cd/rock" class="bot__link">Rock-Musik</a>
     <a href="/music/cd/german-folk-music" class="bot__link">Volksmusik / German folk music</a>
 
+    <a href="/sports/exercise/equipment" class="bot__link">Training Zubehör / Exercise equipment</a>
+
     <a href="/beauty-and-care/skin-care/face-care" class="bot__link">Schönheit: Gesichtspflege / Beauty: Face-Care</a>
     <a href="/beauty-and-care/skin-care/kids" class="bot__link">Pflege: Kinder Hauptpflege / Kids Skin-Care</a>
 
