- added new main category "luxuries"

--- a/src/index.html
+++ b/src/index.html
@@ -87,6 +87,9 @@
 
     <a href="/lighting/inner-lighting/ceiling" class="bot__link">Deckenleuchten / Ceiling Lighting</a>
 
+    <a href="/luxuries/writing-supplies/biros" class="bot__link">Luxus Kugelschreiber / Luxury biros</a>
+    <a href="/luxuries/writing-supplies/fountain-pens" class="bot__link">Luxus Füller / Luxury fountain pens</a>
+
     <a href="/music/cd/alternative" class="bot__link">Alternative-Musik / Alternative-Music</a>
     <a href="/music/cd/pop" class="bot__link">Pop-Musik / Pop-Music</a>
     <a href="/music/cd/rock" class="bot__link">Rock-Musik</a>
