- added new categories - description can now be extended when clicking it

--- a/src/index.html
+++ b/src/index.html
@@ -38,12 +38,14 @@
     <a href="/cosmetics/hair/styling" class="bot__link">Haar-Styling / Hair-Styling</a>
 
     <a href="/fashion/women/bags" class="bot__link">Taschen / Bags</a>
+    <a href="/fashion/women/jackets" class="bot__link">Damen Jacken / Women Jackets</a>
     <a href="/fashion/women/jeans" class="bot__link">Damen Jeans / Women Jeans</a>
     <a href="/fashion/women/jewelry" class="bot__link">Damen Schmuck / Women Jewelry</a>
     <a href="/fashion/women/pants" class="bot__link">Damen Hosen / Women Pants</a>
     <a href="/fashion/women/shoes" class="bot__link">Damen Schuhe / Women Shoes</a>
     <a href="/fashion/women/sweats-and-knitwear" class="bot__link">Damen Pullover und Strickware / Women Sweaters and Knitwear</a>
 
+    <a href="/fashion/men/jackets" class="bot__link">Herren Jacken / Men Jackets</a>
     <a href="/fashion/men/jeans" class="bot__link">Herren Jeans / Men Jeans</a>
     <a href="/fashion/men/jewelry" class="bot__link">Herren Schmuck / Men Jewelry</a>
     <a href="/fashion/men/pants" class="bot__link">Herren Hosen / Men Pants</a>
@@ -85,6 +87,7 @@
     <a href="/electronics-and-computers/large-appliances/fridges-and-freezers" class="bot__link">Kühl- und Gefrierschränke / Fridges and Freezers</a>
     <a href="/electronics-and-computers/large-appliances/washing-machines" class="bot__link">Waschmaschinen / Washing Machines</a>
 
+    <a href="/lighting/inner-lighting/accessoires" class="bot__link">Dekoleuchten / Accessoire Lighting</a>
     <a href="/lighting/inner-lighting/ceiling" class="bot__link">Deckenleuchten / Ceiling Lighting</a>
 
     <a href="/luxuries/writing-supplies/biros" class="bot__link">Luxus Kugelschreiber / Luxury biros</a>
