- added new category "home > garden > lounge furniture"

--- a/src/index.html
+++ b/src/index.html
@@ -58,6 +58,7 @@
     <a href="/home/furniture/kids-beds" class="bot__link">Kinderbetten / Beds for kids</a>
     <a href="/home/garden/garden-houses" class="bot__link">Gartenhäuser / Garden Houses</a>
     <a href="/home/garden/grills" class="bot__link">Grillen / Grill</a>
+    <a href="/home/garden/lounge-furniture" class="bot__link">Garten Loungemöbel / Garden Lounge Furniture</a>
     <a href="/home/tools/drilling-machines" class="bot__link">Bohrmaschinen und Akku-Schrauber / Drilling Machines</a>
     <a href="/home/tools/electric-saws" class="bot__link">Elekrische Sägen / Electric Saws</a>
 
