--- a/src/index.html
+++ b/src/index.html
@@ -54,8 +54,10 @@
 
     <a href="/home/accessoires/carpets" class="bot__link">Teppiche / Carpets</a>
     <a href="/home/furniture/beds" class="bot__link">Betten / Beds</a>
+    <a href="/home/furniture/dining-tables" class="bot__link">Esstische / Dining Tables</a>
     <a href="/home/furniture/gaming-chairs" class="bot__link">Gaming Stühle / Gaming Chairs</a>
     <a href="/home/furniture/kids-beds" class="bot__link">Kinderbetten / Beds for kids</a>
+    <a href="/home/furniture/sofas" class="bot__link">Sofas / Sofas</a>
     <a href="/home/garden/garden-houses" class="bot__link">Gartenhäuser / Garden Houses</a>
     <a href="/home/garden/grills" class="bot__link">Grillen / Grill</a>
     <a href="/home/garden/lounge-furniture" class="bot__link">Garten Loungemöbel / Garden Lounge Furniture</a>
