- added new category "groceries > food > sauces" - added new category "groceries > food > spices"

--- a/src/index.html
+++ b/src/index.html
@@ -52,6 +52,9 @@
     <a href="/fashion/men/shoes" class="bot__link">Herren Schuhe / Men Shoes</a>
     <a href="/fashion/men/sweats-and-knitwear" class="bot__link">Herren Pullover und Strickware / Men Sweaters and Knitwear</a>
 
+    <a href="/groceries/food/sauces" class="bot__link">Pesto & Soßen / Pesto & Sauces</a>
+    <a href="/groceries/food/spices" class="bot__link">Gewürze / Spices</a>
+
     <a href="/home/accessoires/carpets" class="bot__link">Teppiche / Carpets</a>
     <a href="/home/furniture/beds" class="bot__link">Betten / Beds</a>
     <a href="/home/furniture/dining-tables" class="bot__link">Esstische / Dining Tables</a>
