--- a/src/index.html
+++ b/src/index.html
@@ -77,6 +77,7 @@
     <a href="/kids/toys/scooters" class="bot__link">Roller / Scooters</a>
     <a href="/kids/toys/toy-vehicles" class="bot__link">Spielzeugfahrzeuge / Toy vehicles</a>
 
+    <a href="/multimedia/books/crime-and-thrillers" class="bot__link">Krimi- und Thrillerbücher / Crime and Thriller-Books</a>
     <a href="/multimedia/books/history" class="bot__link">Geschichtsbücher / History-Books</a>
     <a href="/multimedia/books/philosophy" class="bot__link">Bücher über Philosophie / Philosophy-Books</a>
     <a href="/multimedia/games/nintendo-switch" class="bot__link">Nintendo Switch Spiele / Nintendo Switch Games</a>
