- added category "computers and electronics > wearables > smartwatches" - added category "computers and electronics > phones > smart- and cellphones"

--- a/src/index.html
+++ b/src/index.html
@@ -93,6 +93,8 @@
     <a href="/electronics-and-computers/large-appliances/dryers" class="bot__link">Trockner / Dryers</a>
     <a href="/electronics-and-computers/large-appliances/fridges-and-freezers" class="bot__link">Kühl- und Gefrierschränke / Fridges and Freezers</a>
     <a href="/electronics-and-computers/large-appliances/washing-machines" class="bot__link">Waschmaschinen / Washing Machines</a>
+    <a href="/electronics-and-computers/phones/smartphones-and-cellphones" class="bot__link">Smartphones und Handys / Smartphones and Cellphones</a>
+    <a href="/electronics-and-computers/wearables/smartwatches" class="bot__link">Smartwatches / Smartwatches</a>
 
     <a href="/lighting/inner-lighting/accessoires" class="bot__link">Dekoleuchten / Accessoire Lighting</a>
     <a href="/lighting/inner-lighting/ceiling" class="bot__link">Deckenleuchten / Ceiling Lighting</a>
