- added new categories

--- a/src/index.html
+++ b/src/index.html
@@ -37,6 +37,8 @@
     <a href="/cosmetics/makeup/lips" class="bot__link">Lippen-Makeup / Makeup Lips</a>
     <a href="/cosmetics/hair/styling" class="bot__link">Haar-Styling / Hair-Styling</a>
 
+    <a href="/fashion/boys/shoes" class="bot__link">Jungen Schuhe / Boys-Shoes</a>
+    <a href="/fashion/girls/shoes" class="bot__link">Mädchen Schuhe / Girls-Shoes</a>
     <a href="/fashion/women/bags" class="bot__link">Taschen / Bags</a>
     <a href="/fashion/women/jackets" class="bot__link">Damen Jacken / Women Jackets</a>
     <a href="/fashion/women/jeans" class="bot__link">Damen Jeans / Women Jeans</a>
