- added new categories

--- a/src/index.html
+++ b/src/index.html
@@ -54,6 +54,8 @@
     <a href="/fashion/men/shoes" class="bot__link">Herren Schuhe / Men Shoes</a>
     <a href="/fashion/men/sweats-and-knitwear" class="bot__link">Herren Pullover und Strickware / Men Sweaters and Knitwear</a>
 
+    <a href="/groceries/food/dry-fruits" class="bot__link">Trockenfrüchte / Dry-Fruits</a>
+    <a href="/groceries/food/nuts" class="bot__link">Nüsse / Nuts</a>
     <a href="/groceries/food/sauces" class="bot__link">Pesto & Soßen / Pesto & Sauces</a>
     <a href="/groceries/food/spices" class="bot__link">Gewürze / Spices</a>
 
