- added new category

--- a/src/index.html
+++ b/src/index.html
@@ -118,6 +118,7 @@
 
     <a href="/vehicles/bicycles/city-bikes" class="bot__link">Stadträder / City bikes</a>
     <a href="/vehicles/bicycles/electric-bikes" class="bot__link">Elekrische Fahrräder / Electric bikes</a>
+    <a href="/vehicles/bicycles/kids-bikes" class="bot__link">Kinderfahrräder / Kids bikes</a>
     <a href="/vehicles/cars/child-seats" class="bot__link">Kindersitze / Child seats</a>
     <a href="/vehicles/cars/summer-tyres" class="bot__link">Sommer Reifen / Summer tyres</a>
     <a href="/vehicles/cars/winter-tyres" class="bot__link">Winter Reifen / Winter tyres</a>
