- added new categories

--- a/src/index.html
+++ b/src/index.html
@@ -91,6 +91,10 @@
     <a href="/multimedia/games/xbox-one" class="bot__link">XBOX One Spiele / XBOX One Games</a>
     <a href="/multimedia/games/xbox-360" class="bot__link">XBOX 360 Spiele / XBOX 360 Games</a>
 
+    <a href="/electronics-and-computers/cables/audio-cables" class="bot__link">Audio Kabel / Audio Cables</a>
+    <a href="/electronics-and-computers/cables/electrical-cables" class="bot__link">Elektrische Kabel / Electrical Cables</a>
+    <a href="/electronics-and-computers/cables/display-cables" class="bot__link">Display Kabel / Display Cables</a>
+    <a href="/electronics-and-computers/cables/network-cables" class="bot__link">Netzwerk Kabel / Network Cables</a>
     <a href="/electronics-and-computers/computers/tablets" class="bot__link">Tablets / Tablets</a>
     <a href="/electronics-and-computers/home/tvs" class="bot__link">Fernseher / TVs</a>
     <a href="/electronics-and-computers/large-appliances/dishwashers" class="bot__link">Geschirrspüler / Dishwashers</a>
