- added new categories

--- a/src/index.html
+++ b/src/index.html
@@ -39,27 +39,30 @@
 
     <a href="/fashion/boys/shoes" class="bot__link">Jungen Schuhe / Boys-Shoes</a>
     <a href="/fashion/girls/shoes" class="bot__link">Mädchen Schuhe / Girls-Shoes</a>
+    <a href="/fashion/men/jackets" class="bot__link">Herren Jacken / Men Jackets</a>
+    <a href="/fashion/men/jeans" class="bot__link">Herren Jeans / Men Jeans</a>
+    <a href="/fashion/men/jewelry" class="bot__link">Herren Schmuck / Men Jewelry</a>
+    <a href="/fashion/men/nightwear" class="bot__link">Herren Nachtwäsche / Men Nightwear</a>
+    <a href="/fashion/men/pants" class="bot__link">Herren Hosen / Men Pants</a>
+    <a href="/fashion/men/shoes" class="bot__link">Herren Schuhe / Men Shoes</a>
+    <a href="/fashion/men/sweats-and-knitwear" class="bot__link">Herren Pullover und Strickware / Men Sweaters and Knitwear</a>
     <a href="/fashion/women/bags" class="bot__link">Taschen / Bags</a>
     <a href="/fashion/women/jackets" class="bot__link">Damen Jacken / Women Jackets</a>
     <a href="/fashion/women/jeans" class="bot__link">Damen Jeans / Women Jeans</a>
     <a href="/fashion/women/jewelry" class="bot__link">Damen Schmuck / Women Jewelry</a>
+    <a href="/fashion/women/nightwear" class="bot__link">Damen Nachtwäsche / Women Nightwear</a>
     <a href="/fashion/women/pants" class="bot__link">Damen Hosen / Women Pants</a>
     <a href="/fashion/women/shoes" class="bot__link">Damen Schuhe / Women Shoes</a>
     <a href="/fashion/women/sweats-and-knitwear" class="bot__link">Damen Pullover und Strickware / Women Sweaters and Knitwear</a>
-
-    <a href="/fashion/men/jackets" class="bot__link">Herren Jacken / Men Jackets</a>
-    <a href="/fashion/men/jeans" class="bot__link">Herren Jeans / Men Jeans</a>
-    <a href="/fashion/men/jewelry" class="bot__link">Herren Schmuck / Men Jewelry</a>
-    <a href="/fashion/men/pants" class="bot__link">Herren Hosen / Men Pants</a>
-    <a href="/fashion/men/shoes" class="bot__link">Herren Schuhe / Men Shoes</a>
-    <a href="/fashion/men/sweats-and-knitwear" class="bot__link">Herren Pullover und Strickware / Men Sweaters and Knitwear</a>
 
     <a href="/groceries/food/dry-fruits" class="bot__link">Trockenfrüchte / Dry-Fruits</a>
     <a href="/groceries/food/nuts" class="bot__link">Nüsse / Nuts</a>
     <a href="/groceries/food/sauces" class="bot__link">Pesto & Soßen / Pesto & Sauces</a>
     <a href="/groceries/food/spices" class="bot__link">Gewürze / Spices</a>
 
+    <a href="/home/accessoires/bed-covers" class="bot__link">Bettdecken / Bed Covers</a>
     <a href="/home/accessoires/carpets" class="bot__link">Teppiche / Carpets</a>
+    <a href="/home/accessoires/pillows" class="bot__link">Kissen / Pillows</a>
     <a href="/home/furniture/beds" class="bot__link">Betten / Beds</a>
     <a href="/home/furniture/dining-tables" class="bot__link">Esstische / Dining Tables</a>
     <a href="/home/furniture/gaming-chairs" class="bot__link">Gaming Stühle / Gaming Chairs</a>
