--- a/src/index.html
+++ b/src/index.html
@@ -70,7 +70,10 @@
     <a href="/home/furniture/sofas" class="bot__link">Sofas / Sofas</a>
     <a href="/home/garden/garden-houses" class="bot__link">Gartenhäuser / Garden Houses</a>
     <a href="/home/garden/grills" class="bot__link">Grillen / Grill</a>
+    <a href="/home/garden/lawenmowers" class="bot__link">Rasenmäher / Lawnmowers</a>
     <a href="/home/garden/lounge-furniture" class="bot__link">Garten Loungemöbel / Garden Lounge Furniture</a>
+    <a href="/home/pets/cats" class="bot__link">Katzen / Cats</a>
+    <a href="/home/pets/dogs" class="bot__link">Hunde / Dogs</a>
     <a href="/home/tools/drilling-machines" class="bot__link">Bohrmaschinen und Akku-Schrauber / Drilling Machines</a>
     <a href="/home/tools/electric-saws" class="bot__link">Elekrische Sägen / Electric Saws</a>
 
