- added new categories

--- a/src/index.html
+++ b/src/index.html
@@ -55,6 +55,7 @@
     <a href="/fashion/women/shoes" class="bot__link">Damen Schuhe / Women Shoes</a>
     <a href="/fashion/women/sweats-and-knitwear" class="bot__link">Damen Pullover und Strickware / Women Sweaters and Knitwear</a>
 
+    <a href="/groceries/drinks/coffee" class="bot__link">Kaffee / Coffee</a>
     <a href="/groceries/food/dry-fruits" class="bot__link">Trockenfrüchte / Dry-Fruits</a>
     <a href="/groceries/food/nuts" class="bot__link">Nüsse / Nuts</a>
     <a href="/groceries/food/sauces" class="bot__link">Pesto & Soßen / Pesto & Sauces</a>
@@ -113,6 +114,7 @@
     <a href="/lighting/inner-lighting/accessoires" class="bot__link">Dekoleuchten / Accessoire Lighting</a>
     <a href="/lighting/inner-lighting/ceiling" class="bot__link">Deckenleuchten / Ceiling Lighting</a>
 
+    <a href="/luxuries/drinks/coffee" class="bot__link">Luxus Kaffee / Luxury coffee</a>
     <a href="/luxuries/writing-supplies/biros" class="bot__link">Luxus Kugelschreiber / Luxury biros</a>
     <a href="/luxuries/writing-supplies/fountain-pens" class="bot__link">Luxus Füller / Luxury fountain pens</a>
 
