- added new categories

--- a/src/index.html
+++ b/src/index.html
@@ -97,6 +97,8 @@
     <a href="/multimedia/games/playstation-5" class="bot__link">Playstation 5 Spiele / Playstation 5 Games</a>
     <a href="/multimedia/games/xbox-one" class="bot__link">XBOX One Spiele / XBOX One Games</a>
     <a href="/multimedia/games/xbox-360" class="bot__link">XBOX 360 Spiele / XBOX 360 Games</a>
+    <a href="/multimedia/movies/action" class="bot__link">Action Filme / Action Movies</a>
+    <a href="/multimedia/movies/fantasy" class="bot__link">Fantasy Filme / Fantasy Movies</a>
 
     <a href="/electronics-and-computers/cables/audio-cables" class="bot__link">Audio Kabel / Audio Cables</a>
     <a href="/electronics-and-computers/cables/electrical-cables" class="bot__link">Elektrische Kabel / Electrical Cables</a>
