- added new categories

--- a/src/index.html
+++ b/src/index.html
@@ -73,6 +73,7 @@
     <a href="/home/garden/grills" class="bot__link">Grillen / Grill</a>
     <a href="/home/garden/lawenmowers" class="bot__link">Rasenmäher / Lawnmowers</a>
     <a href="/home/garden/lounge-furniture" class="bot__link">Garten Loungemöbel / Garden Lounge Furniture</a>
+    <a href="/home/garden/sports" class="bot__link">Garten Sport und Spiel / Garden Sports and Games</a>
     <a href="/home/pets/cats" class="bot__link">Katzen / Cats</a>
     <a href="/home/pets/dogs" class="bot__link">Hunde / Dogs</a>
     <a href="/home/tools/drilling-machines" class="bot__link">Bohrmaschinen und Akku-Schrauber / Drilling Machines</a>
