--- a/src/index.html
+++ b/src/index.html
@@ -84,7 +84,8 @@
     <a href="/kids/school/satchel" class="bot__link">Schulrucksäcke / School Satchels</a>
     <a href="/kids/toys/babies" class="bot__link">Baby-Spielzeuge / Baby-Toys</a>
     <a href="/kids/toys/construction-toys" class="bot__link">Bau- und Konstruktionsspielzeug / Build- and Construction-Toys</a>
-    <a href="/kids/toys/electric-vehicles" class="bot__link">Elektro-Fahrzeuge / Electric vehicles</a>
+    <a href="/kids/toys/electric-vehicles" class="bot__link">Kinder Elektro-Fahrzeuge / Electrical kid vehicles</a>
+    <a href="/kids/toys/experiment-and-research" class="bot__link">Experimentier- und Forschungsspielzeug / Experiment and Research Toys</a>
     <a href="/kids/toys/games" class="bot__link">Spiele / Games</a>
     <a href="/kids/toys/scooters" class="bot__link">Roller / Scooters</a>
     <a href="/kids/toys/toy-vehicles" class="bot__link">Spielzeugfahrzeuge / Toy vehicles</a>
