- resources are no longer loaded from cloudflare

--- a/src/index.html
+++ b/src/index.html
@@ -6,10 +6,8 @@
     <link rel="icon" type="image/x-icon" href="favicon.ico">
     <script src="https://www.dwin2.com/pub.1262311.min.js"></script>
 
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/slick-carousel/1.8.1/slick.min.css"/>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.6.4/jquery.min.js"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/slick-carousel/1.8.1/slick.min.js"></script>
-    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.15.1/css/all.css" integrity="sha384-vp86vTRFVJgpjF9jiIGPEEqYqlDwgyBgEF109VFjmqGmIY/Y4HV4d3Gp2irVfcrp" crossorigin="anonymous">
+    <script src="assets/jquery/jquery.min.js"></script>
+    <script src="assets/slick-slide/slick.min.js"></script>
 
     <meta charset="utf-8">
     <meta name="robots" content="index, follow">
