--- a/src/index.html
+++ b/src/index.html
@@ -3,6 +3,14 @@
   <head>
     <title>We wanna shop!</title>
     <base href="/">
+
+    <link rel="preconnect" href="//www.dwin2.com/" crossorigin>
+    <link rel="preconnect" href="//m.media-amazon.com/" crossorigin>
+    <link rel="preconnect" href="//i.otto.de/" crossorigin>
+    <link rel="dns-prefetch" href="//www.dwin2.com/">
+    <link rel="dns-prefetch" href="//m.media-amazon.com/">
+    <link rel="dns-prefetch" href="//i.otto.de/">
+
     <link rel="icon" type="image/x-icon" href="favicon.ico">
     <script src="https://www.dwin2.com/pub.1262311.min.js"></script>
 
