--- a/src/index.html
+++ b/src/index.html
@@ -8,7 +8,7 @@
     <link rel="dns-prefetch" href="//www.dwin2.com/">
 
     <link rel="icon" type="image/x-icon" href="favicon.ico">
-    <script src="https://www.dwin2.com/pub.1262311.min.js"></script>
+    <script async src="https://www.dwin2.com/pub.1262311.min.js"></script>
 
     <script src="assets/jquery/jquery.min.js"></script>
     <script src="assets/slick-slide/slick.min.js"></script>
