--- a/src/index.html
+++ b/src/index.html
@@ -17,8 +17,7 @@
     <meta name="robots" content="index, follow">
     <meta name="verification" content="b2e3aa44ed9d8b3778745072ab5578e3"/>
     <meta name="viewport" content="width=device-width, initial-scale=1"/>
-    <meta name="keywords" content="finden, shopping, mode, musik, kinder, multimedia, technik, videospiele, konsolen, elektronik, computer, schönheit, pflege, entertainment"/>
-    <meta name="description" content="Finde alles was du brauchst oder mache deiner Familie oder deinen Freunden eine Freude. Hier findest du alle möglichen Produkte auf vielen Shops im Netz nach deinem Bedarf!" />
+    <meta name="description" content="Entdecke und kaufe deine Lieblingsprodukte in einer Umgebung, die deine Privatsphäre respektiert. Genieße anonymes Online-Shopping ohne Analyse oder Datenverfolgung. Erlebe sorgenfreies Internet-Shopping genau für dich entwickelt!" />
 
     <style>
       body {
