--- a/src/index.html
+++ b/src/index.html
@@ -1,7 +1,7 @@
 <!doctype html>
 <html lang="de">
   <head>
-    <title>We wanna shop!</title>
+    <title>We Wanna Shop!</title>
     <base href="/">
 
     <link rel="preconnect" href="//www.dwin2.com/" crossorigin>
