--- a/src/index.html
+++ b/src/index.html
@@ -13,6 +13,10 @@
     <script src="assets/jquery/jquery.min.js"></script>
     <script src="assets/slick-slide/slick.min.js"></script>
 
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Mulish:ital,wght@0,200..1000;1,200..1000&display=swap" rel="stylesheet">
+
     <meta charset="utf-8">
     <meta name="robots" content="index, follow">
     <meta name="verification" content="b2e3aa44ed9d8b3778745072ab5578e3"/>
